Fixes alignment of Navbar logo and subtext

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ nav {
   display: flex;
   flex-direction: column;
   gap: 0px;
+  align-items: center;
   
 }
 
